Set overflow on pillbox, implemented max number of keywords, and fixed a bug on number keywords.

--- a/ui/css/extend.css
+++ b/ui/css/extend.css
@@ -75,6 +75,7 @@
 	padding: 20px;
 	height: 394px;
 	max-height: 394px;
+    overflow: auto;
 }
 
 .fuelux .pillbox li {
